edited the index file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Monica</title>
+    <title>Emzeeviolino.</title>
 
     <script>
         document.documentElement.classList.remove('no-js');
@@ -96,12 +96,12 @@
                     <div class="column lg-12 s-intro__content-inner grid-block">
                         
                         <div class="s-intro__content-text">
-                            <div class="s-intro__content-pretitle text-pretitle">Hello, I'm Monica</div>
+                            <div class="s-intro__content-pretitle text-pretitle">Hello, I'm Emzeeviolino</div>
                             <h1 class="s-intro__content-title">
-                            I create marketing <br>
-                            strategies for your <br>
-                            business that get <br>
-                            results.
+                            I create melodies <br>
+                            that resonates <br>
+                            with your spirit <br>
+                            and soul.
                             </h1>
                         </div> <!-- s-intro__content-text -->
 
